[build-system]
requires = ["setuptools>=56", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true

[tool.setuptools_scm]

[tool.pytest-enabler.black]
# disabled for pytest-dev/pytest#8332
# addopts = "--black"

[tool.pytest-enabler.mypy]
# disabled for pytest-dev/pytest#8332
# addopts = "--mypy"

[tool.pytest-enabler.cov]
addopts = "--cov"

[tool.pytest-enabler.ruff]
addopts = "--ruff"
