[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = jaraco.site
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = jaraco.com main website
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.site
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
	CherryPy
	Genshi
	lxml
	svg.charts
	requests
	more_itertools
	grampg
	requests_toolbelt
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
