[metadata]
name = jaraco.site
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = jaraco.com main website
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.site
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	CherryPy
	Genshi
	lxml
	svg.charts
	requests
	more_itertools
	requests_toolbelt
	importlib_resources

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	# workaround for pytest-dev/pytest#12112
	pytest@git+https://github.com/pytest-dev/pytest@refs/pull/12169/head
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
